@@ -70,6 +70,7 @@ Mojo::IOLoop::Subprocess - Subprocesses
     },
     sub {
       my ($subprocess, $err, @results) = @_;
+      say "Subprocess error: $err" and return if $err;
       say "I $results[0] $results[1]!";
     }
   );
