@@ -17,12 +17,13 @@ sub run {
   my ($self, @args) = @_;
 
   GetOptionsFromArray \@args,
-    'C|charset=s' => \my $charset,
-    'c|content=s' => \(my $content = ''),
-    'H|header=s'  => \my @headers,
-    'M|method=s'  => \(my $method = 'GET'),
-    'r|redirect'  => \my $redirect,
-    'v|verbose'   => \my $verbose;
+    'C|charset=s'            => \my $charset,
+    'c|content=s'            => \(my $content = ''),
+    'H|header=s'             => \my @headers,
+    'i|inactivity-timeout=i' => \my $inactivity,
+    'M|method=s'             => \(my $method = 'GET'),
+    'r|redirect'             => \my $redirect,
+    'v|verbose'              => \my $verbose;
 
   @args = map { decode 'UTF-8', $_ } @args;
   die $self->usage unless my $url = shift @args;
@@ -35,6 +36,8 @@ sub run {
   my $ua = Mojo::UserAgent->new(ioloop => Mojo::IOLoop->singleton);
   $url !~ m!^/! ? $ua->proxy->detect : $ua->server->app($self->app);
   $ua->max_redirects(10) if $redirect;
+
+  $ua->inactivity_timeout($inactivity) if defined $inactivity;
 
   my $buffer = '';
   $ua->on(
@@ -131,7 +134,7 @@ Mojolicious::Command::get - Get command
     ./myapp.pl get -H 'Accept: text/html' /hello.html 'head > title' text
     ./myapp.pl get //sri:secr3t@/secrets.json /1/content
     mojo get mojolicious.org
-    mojo get -v -r google.com
+    mojo get -v -r -i 50 google.com
     mojo get -v -H 'Host: mojolicious.org' -H 'Accept: */*' mojolicious.org
     mojo get -M POST -H 'Content-Type: text/trololo' -c 'trololo' perl.org
     mojo get mojolicious.org 'head > title' text
@@ -142,20 +145,23 @@ Mojolicious::Command::get - Get command
     mojo get https://api.metacpan.org/v0/author/SRI /name
 
   Options:
-    -C, --charset <charset>     Charset of HTML/XML content, defaults to
-                                auto-detection
-    -c, --content <content>     Content to send with request
-    -H, --header <name:value>   Additional HTTP header
-    -h, --help                  Show this summary of available options
-        --home <path>           Path to home directory of your application,
-                                defaults to the value of MOJO_HOME or
-                                auto-detection
-    -M, --method <method>       HTTP method to use, defaults to "GET"
-    -m, --mode <name>           Operating mode for your application, defaults to
-                                the value of MOJO_MODE/PLACK_ENV or
-                                "development"
-    -r, --redirect              Follow up to 10 redirects
-    -v, --verbose               Print request and response headers to STDERR
+    -C, --charset <charset>              Charset of HTML/XML content, defaults
+                                         to auto-detection
+    -c, --content <content>              Content to send with request
+    -H, --header <name:value>            Additional HTTP header
+    -h, --help                           Show this summary of available options
+        --home <path>                    Path to home directory of your
+                                         application, defaults to the value of
+                                         MOJO_HOME or auto-detection
+    -i, --inactivity-timeout <seconds>   Inactivity timeout, defaults to the
+                                         value of MOJO_INACTIVITY_TIMEOUT or 20
+    -M, --method <method>                HTTP method to use, defaults to "GET"
+    -m, --mode <name>                    Operating mode for your application,
+                                         defaults to the value of
+                                         MOJO_MODE/PLACK_ENV or "development"
+    -r, --redirect                       Follow up to 10 redirects
+    -v, --verbose                        Print request and response headers to
+                                         STDERR
 
 =head1 DESCRIPTION
 
